[project]
name = "leetcode-api"
version = "1.0.0"
description = "A FastAPI REST API to fetch and display LeetCode statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "requests>=2.32.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
